# saasr

./: .gitignore  README.md
.github/workflows/: docker-build-and-push.yml
FastAPI/: .gitignore  INSTALL.md  README.md  docker-compose.yml  stack.yml
FastAPI/app/: config.py  main.py
FastAPI/app/core/: auth.py  crud.py  mail.py
FastAPI/app/team/: model.py  router_invitation.py  router_participation.py  test_team.py
FastAPI/app/user/: crud.py  data.py  html.py  test_auth.py
FastAPI/scripts/: build.sh
MUI/: .gitignore  README.md  orval.config.js  package-lock.json
MUI/public/: manifest.json
MUI/src/: App.tsx
MUI/src/pages/: AuthForgotPasswordConfirm.tsx  AuthLogin.tsx  AuthLogout.tsx  AuthRegisterConfirm.tsx  Issue.tsx  IssueEdit.tsx  IssueNew.tsx  Join.tsx
backend/: Dockerfile  README.docker.md  README.md  apt_install.sh  backend.yml  mypy.ini  pyproject.toml
backend/app/: config.py  conftest.py  initial_data.py  lib.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 44a5aac6e75a_reinit.py  80ad669861c6_reinit.py
backend/app/core/: error.py  error_code.json  schema.py  security.py  session.py
backend/app/opt/payment/: crud.py  router_card.py  router_iyzico.py  schema.py  test_card.py  test_payment_request.py
backend/app/opt/support/: router_message.py  schema.py
backend/app/team/: crud.py  router_team.py  schema.py  util.py
backend/app/user/: model.py  router_auth.py  router_users.py  schema.py  test_users.py
frontend/: package.json  tsconfig.json
frontend/src/: AppRoutes.tsx  index.tsx
frontend/src/pages/: Forbidden.tsx  (+7 more)
(+87 files in other folders)
